# Kintsugi

./: .gitignore  MidiPlayer.slnx  README.md
.github/workflows/: build-artifacts.yml
scripts/: publish-macos-app.sh  publish-portable-package.sh  publish-windows-portable.ps1
src/MidiPlayer.App/: AboutWindow.axaml  AboutWindow.axaml.cs  App.axaml  App.axaml.cs  AudioPluginPickerWindow.axaml  AudioPluginPickerWindow.axaml.cs  BuiltinEqWindow.axaml  BuiltinEqWindow.axaml.cs  ChannelMixStrip.cs  ExportWavWindow.axaml  ExportWavWindow.axaml.cs  MainWindow.axaml  MainWindow.axaml.cs  MidiEventsWindow.axaml  MidiEventsWindow.axaml.cs  MidiPlayer.App.csproj  Program.cs  SettingsWindow.axaml  SettingsWindow.axaml.cs
src/MidiPlayer.App/Controls/: ChannelMonitorControl.cs  ChannelVisualPalette.cs  KnobControl.cs  LoopTimelineControl.cs  PianoControl.cs  PianoKeyLayout.cs  PianoRollControl.cs  SpectrumControl.cs
src/MidiPlayer.App/DbusXml/: org.mpris.MediaPlayer2.Player.xml  org.mpris.MediaPlayer2.xml
src/MidiPlayer.App/Models/: AudioEffectChainItem.cs  MidiEventBrowserDocument.cs  PianoRollNote.cs  PlaylistItem.cs
src/MidiPlayer.App/Services/: AppSettings.cs  AppSkinManager.cs  AudioEffectPluginHost.cs  AudioExportOptions.cs  BassMidiPlayer.cs  BundledSoundFont.cs  ChannelSendMode.cs  MidiEqSettings.cs  MidiEventBrowserService.cs  MidiFileAnalysisService.cs  MidiMixSettings.cs  MidiStandardNames.cs  PlaylistFileParser.cs  SystemMediaControls.Linux.cs  SystemMediaControls.Mac.cs  SystemMediaControls.Noop.cs  SystemMediaControls.Shared.cs  SystemMediaControls.Windows.cs  SystemMediaControls.cs  WavExportOptions.cs
src/MidiPlayer.App/Styles/: Common.axaml  Common.axaml.cs
src/MidiPlayer.App/Styles/Skins/: ModernDark.axaml  ModernDark.axaml.cs  WindowsClassic.axaml  WindowsClassic.axaml.cs  WindowsClassicOverrides.axaml  WindowsClassicOverrides.axaml.cs
src/native/macos/: MediaControls.m
src/native/pluginhost/: CMakeLists.txt  PluginHost.cpp
test-proj/: Program.cs  TestMidi.csproj
tools/NativeAssetDownloader/: NativeAssetDownloader.csproj  Program.cs
